Revert "Added reset-password and forgot-password UI pages"

--- a/src/app/core/forget-password/forget-password.component.html
+++ b/src/app/core/forget-password/forget-password.component.html
@@ -1,9 +1,1 @@
-<div class="forgot-container">
-  <h2>Forgot Password</h2>
-  <form (ngSubmit)="onSubmit()">
-    <label>Email Address</label>
-    <input type="email" [(ngModel)]="email" name="email" required />
-    <button type="submit">Send Reset Link</button>
-  </form>
-  <p *ngIf="message">{{ message }}</p>
-</div>
+<p>forget-password works!</p>
