--- a/src/app/core/change-password/change-password.component.html
+++ b/src/app/core/change-password/change-password.component.html
@@ -10,7 +10,7 @@
           type="text"
           name="username"
           [(ngModel)]="username"
-          readonly
+          required
         />
       </div>
 
